--- a/css/style.css
+++ b/css/style.css
@@ -176,7 +176,7 @@ html {
 
 nav,
 section {
-  margin: 0 200px;
+  margin: 0 20em;
 }
 
 .wrap {
@@ -261,4 +261,29 @@ section {
 
 
 /* Parameter */
+section.parameter_wrap {
+  margin: 0;
+}
+.parameter_wrap {
+  background-image: url("../image/pic_background01.png");
+  flex-wrap: wrap;
+}
+
+.parameter_row {
+  display: row;
+  flex-direction: column;
+}
+
+.parameter_row:nth-of-type(1) > figure {
+  display: flex;
+  margin-left: 20em;
+}
+
+.parameter_row:nth-of-type(2) {
+  margin-right: 20em;
+}
+
+
+
+
 
