--- a/css/style.css
+++ b/css/style.css
@@ -270,7 +270,8 @@ section.parameter_wrap {
 }
 
 .parameter_row {
-  display: row;
+  display: flex;
+  flex-basis: 100%;
   flex-direction: column;
 }
 
@@ -280,8 +281,37 @@ section.parameter_wrap {
 }
 
 .parameter_row:nth-of-type(2) {
+  justify-content: space-around;
+  align-content: center;
   margin-right: 20em;
 }
+
+
+
+/* Product */
+.product_wrap {
+  flex-wrap: wrap;
+}
+
+.product_row {
+  display: flex;
+  flex-basis: 100%;
+}
+
+.product_row:nth-of-type(1) {
+  justify-content: center;
+}
+
+.product_row:nth-of-type(2) {
+  justify-content: space-around;
+}
+
+.product_row:nth-of-type(3) {
+  justify-content: center;
+}
+
+
+
 
 
 
