--- a/css/style.css
+++ b/css/style.css
@@ -312,6 +312,34 @@ section.parameter_wrap {
 
 
 
+/* Contact */
+section.contact_wrap{
+  margin: 0;
+}
+
+.contact_wrap {
+  flex-wrap: wrap;
+  justify-content: space-between;
+  background-image: url("../image/pic_background02.png");
+}
+
+.contact_row {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.contact_row:nth-of-type(1) {
+  margin-left: 20em;
+}
+
+.contact_row:nth-of-type(2) {
+  display: block;
+  margin-right: 20em;
+}
+
+
+
 
 
 
