--- a/css/style.css
+++ b/css/style.css
@@ -80,7 +80,7 @@ textarea {
     'helvetica neue', 'hiragino sans gb', sans-serif;
 }
 
-html[lang=en] body {
+html body {
   font: 12px/1.5 tahoma, arial, 'helvetica neue', 'hiragino sans gb', sans-serif;
 }
 
@@ -170,23 +170,28 @@ ul {
 
 body,
 html {
+  font-size: 62.5%;
   background: #fff;
   width: 100%;
 }
 
 nav,
 section {
-  margin: 0 20em;
-}
-
-.wrap {
-  display: flex;
-  overflow: hidden;
+  margin: 0 200px;
 }
 
 /* Navbar */
+.wrap {
+  display: flex;
+}
+
 .nav_wrap {
   justify-content: space-between;
+}
+
+.nav_wrap a img {
+  height: 80px;
+  width: 200px;
 }
 
 .nav_wrap ul > li {
@@ -213,19 +218,13 @@ section {
 .advantage_row {
   display: flex;
   flex-basis: 100%;
-}
-
-.advantage_row:nth-of-type(1) {
-  justify-content: flex-start;
-}
-
-.advantage_row:nth-of-type(2),
-.advantage_row:nth-of-type(3) {
   justify-content: center;
 }
 
-.advantage_row:nth-of-type(4) {
-  justify-content: space-between;
+.advantage_row:nth-of-type(3) figure img {
+  height: 210px;
+  width: 340px;
+  overflow: hidden;
 }
 
 /* Data */
@@ -246,7 +245,10 @@ section {
   justify-content: space-around;
 }
 
-
+.data_row:nth-of-type(1) > img {
+  height: 58px;
+  width: 58px;
+}
 
 /* Scene */
 .scene_row {
@@ -258,7 +260,20 @@ section {
   display: flex;
 }
 
+.scene_row:nth-of-type(1) img {
+  height: 300px;
+  width: 300px;
+}
 
+.sketch_lock img {
+  height: 158px;
+  width: 66px;
+}
+
+.scene_pic > img {
+  height: 110px;
+  width: 156px;
+}
 
 /* Parameter */
 section.parameter_wrap {
@@ -266,27 +281,31 @@ section.parameter_wrap {
 }
 .parameter_wrap {
   background-image: url("../image/pic_background01.png");
+  background-size: 100% 100%;
   flex-wrap: wrap;
+  justify-content: space-around;
+  height: 520px;
 }
 
 .parameter_row {
   display: flex;
-  flex-basis: 100%;
   flex-direction: column;
+  justify-content: space-around;
 }
 
-.parameter_row:nth-of-type(1) > figure {
+.parameter_row:nth-of-type(1) figure {
   display: flex;
-  margin-left: 20em;
+  margin-left: 200px;
+}
+
+.parameter_row:nth-of-type(1) figure > img {
+  height: 78px;
+  width: 300px;
 }
 
 .parameter_row:nth-of-type(2) {
-  justify-content: space-around;
-  align-content: center;
-  margin-right: 20em;
+  margin-right: 200px;
 }
-
-
 
 /* Product */
 .product_wrap {
@@ -298,7 +317,8 @@ section.parameter_wrap {
   flex-basis: 100%;
 }
 
-.product_row:nth-of-type(1) {
+.product_row:nth-of-type(1),
+.product_row:nth-of-type(3) {
   justify-content: center;
 }
 
@@ -306,38 +326,57 @@ section.parameter_wrap {
   justify-content: space-around;
 }
 
-.product_row:nth-of-type(3) {
-  justify-content: center;
+.product_row:nth-of-type(2) img {
+  height: 310px;
+  width: 450px;
 }
 
-
+.product_row:nth-of-type(3) img {
+  height: 120px;
+  width: 120px;
+}
 
 /* Contact */
-section.contact_wrap{
+section.contact_wrap {
   margin: 0;
 }
 
 .contact_wrap {
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: space-around;
   background-image: url("../image/pic_background02.png");
+  background-size: 100% 100%;
+  height: 518px;
 }
 
 .contact_row {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: space-around;
 }
 
 .contact_row:nth-of-type(1) {
-  margin-left: 20em;
+  margin-left: 20px;
+}
+
+.contact_row:nth-of-type(1) div img {
+  height: 40px;
+  width: 40px;
 }
 
 .contact_row:nth-of-type(2) {
   display: block;
-  margin-right: 20em;
+  margin-right: 20px;
 }
 
+.form_element {
+  width: 342px;
+  height: 36px;
+}
+
+.form_element textarea {
+  height: 120px;
+}
 
 
 /* Footer */
@@ -351,9 +390,7 @@ section.contact_wrap{
   justify-content: space-around;
 }
 
-
-
-
-
-
-
+.footer_row:nth-of-type(1) figure img {
+  height: 136px;
+  width: 136px;
+}
