--- a/css/style.css
+++ b/css/style.css
@@ -176,17 +176,20 @@ html {
 }
 
 nav,
-section {
-  margin: 0 200px;
+section,
+footer {
+  margin: 0 20%;
 }
 
 /* Navbar */
 .wrap {
   display: flex;
+  flex: auto;
 }
 
 .nav_wrap {
   justify-content: space-between;
+  flex: auto;
 }
 
 .nav_wrap a img {
@@ -206,13 +209,14 @@ section {
 }
 
 .cut {
-  margin: 0 200px;
+  margin: 0 20%;
 }
 
 /* Advantage */
 
 .advantage_wrap {
   flex-wrap: wrap;
+  flex: auto;
 }
 
 .advantage_row {
@@ -230,6 +234,7 @@ section {
 /* Data */
 .data_wrap {
   flex-wrap: wrap;
+  flex: auto;
 }
 
 .data_row {
@@ -251,6 +256,11 @@ section {
 }
 
 /* Scene */
+.scene_wrap {
+  flex-wrap: wrap;
+  flex: auto;
+}
+
 .scene_row {
   justify-content: space-between;
 }
@@ -270,6 +280,12 @@ section {
   width: 66px;
 }
 
+.scene_pic {
+  display: flex;
+  flex: auto;
+  justify-content: space-around;
+}
+
 .scene_pic > img {
   height: 110px;
   width: 156px;
@@ -283,6 +299,7 @@ section.parameter_wrap {
   background-image: url("../image/pic_background01.png");
   background-size: 100% 100%;
   flex-wrap: wrap;
+  flex: auto;
   justify-content: space-around;
   height: 520px;
 }
@@ -295,7 +312,7 @@ section.parameter_wrap {
 
 .parameter_row:nth-of-type(1) figure {
   display: flex;
-  margin-left: 200px;
+  margin-left: 20%;
 }
 
 .parameter_row:nth-of-type(1) figure > img {
@@ -304,7 +321,7 @@ section.parameter_wrap {
 }
 
 .parameter_row:nth-of-type(2) {
-  margin-right: 200px;
+  margin-right: 20%;
 }
 
 /* Product */
@@ -343,6 +360,7 @@ section.contact_wrap {
 
 .contact_wrap {
   flex-wrap: wrap;
+  flex: auto;
   justify-content: space-around;
   background-image: url("../image/pic_background02.png");
   background-size: 100% 100%;
@@ -388,6 +406,7 @@ section.contact_wrap {
 /* Footer */
 .footer_wrap {
   flex-wrap: wrap;
+  flex: auto;
 }
 
 .footer_row {
@@ -406,3 +425,4 @@ section.contact_wrap {
 .footer_row:nth-of-type(1) figure {
   text-align: center; 
 }
+
