--- a/css/style.css
+++ b/css/style.css
@@ -154,6 +154,8 @@ table {
 fieldset,
 iframe,
 img {
+  max-width: 100%;
+  max-height: 100%;
   border: 0;
 }
 
@@ -178,7 +180,14 @@ html {
 nav,
 section,
 footer {
-  margin: 0 20%;
+  margin: 0 10%;
+}
+
+.body_wrap {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  flex: auto;
 }
 
 /* Navbar */
@@ -192,9 +201,14 @@ footer {
   flex: auto;
 }
 
-.nav_wrap a img {
+.logo{
+  display: block;
   height: 80px;
   width: 200px;
+  text-indent: -9999px;
+  background-image: url("../image/nav_logo.png");
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
 }
 
 .nav_wrap ul > li {
@@ -241,6 +255,8 @@ footer {
 
 .advantage_row {
   display: flex;
+  flex: auto;
+  flex-wrap: wrap;
   flex-basis: 100%;
   justify-content: center;
 }
@@ -249,15 +265,15 @@ footer {
   margin: 20px 0 72px 0;
 }
 
-.advantage_row:nth-of-type(3) figure > img {
-  height: 210px;
-  width: 340px;
-  overflow: hidden;
-}
-
 .advantage_row:nth-of-type(3) figure > figcaption {
   margin: 24px 0 72px 0; 
   text-align: center;
+}
+
+.advantage_row > figure > img {
+  height: 210px;
+  width: 340px;
+  overflow: hidden;
 }
 
 /* Data */
@@ -298,6 +314,7 @@ footer {
 .scene_wrap {
   flex-wrap: wrap;
   flex: auto;
+  justify-content: space-around;
 }
 
 .scene_row {
@@ -307,6 +324,8 @@ footer {
 .scene_person,
 .scene_pic {
   display: flex;
+  flex-wrap: wrap;  
+  flex: auto;
   justify-content: space-between;
 }
 
@@ -357,6 +376,8 @@ section.parameter_wrap {
 
 .parameter_row {
   display: flex;
+  flex-wrap: wrap;
+  flex: auto;
   flex-direction: column;
 }
 
@@ -385,20 +406,18 @@ section.parameter_wrap {
 /* Product */
 .product_wrap {
   flex-wrap: wrap;
+  flex: auto;
 }
 
 .product_row {
   display: flex;
+  flex-wrap: wrap;
   flex-basis: 100%;
-}
-
-.product_row:nth-of-type(1),
-.product_row:nth-of-type(3) {
   justify-content: center;
 }
 
-.product_row:nth-of-type(2) {
-  justify-content: space-around;
+.product_row:nth-of-type(2) div:last-child {
+  width: 200px;
 }
 
 .product_row:nth-of-type(2) img {
@@ -427,6 +446,8 @@ section.contact_wrap {
 
 .contact_row {
   display: flex;
+  flex-wrap: wrap;
+  flex: auto;
   flex-direction: column;
   justify-content: center;
 }
@@ -464,16 +485,17 @@ section.contact_wrap {
 /* Footer */
 .footer_wrap {
   flex-wrap: wrap;
+  flex-direction: column;
   flex: auto;
 }
 
 .footer_row {
   display: flex;
-  flex-basis: 100%;
-  justify-content: space-around;
+  flex-wrap: wrap;
+  flex: auto;
+  justify-content: center;
 }
 .footer_row:nth-of-type(1) {
-  justify-content: center;
 }
 .footer_row:nth-of-type(1) figure img {
   height: 136px;
