--- a/css/style.css
+++ b/css/style.css
@@ -799,3 +799,8 @@ section.parameter_wrap {
   font-size: 16px;
   margin: 50px 0 8px 0;
 }
+
+/* @media only screen 
+and (max-device-width:320px) {
+  
+} */
