--- a/css/style.css
+++ b/css/style.css
@@ -122,7 +122,8 @@ input,
 select,
 textarea {
   font-size: 1em;
-  box-sizing: content-box;
+  -webkit-box-sizing: content-box;
+          box-sizing: content-box;
 }
 
 button,
@@ -186,19 +187,29 @@ footer {
 /* Navbar */
 
 .wrap {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex: auto;
+  -webkit-box-flex: 1;
+      -ms-flex: auto;
+          flex: auto;
 }
 
 .nav_wrap {
-  flex-wrap: wrap;
-  flex: auto;
-  justify-content: space-between;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-flex: 1;
+      -ms-flex: auto;
+          flex: auto;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   margin: 0;
   background-color: rgba(0, 0, 0, 1);
   ;
   z-index: 9999;
   overflow: hidden;
+  -webkit-transition: height 0.3s;
   transition: height 0.3s;
   height: 104px;
 }
@@ -217,8 +228,12 @@ footer {
 }
 
 .nav_wrap ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   margin-right: 12%;
 }
 
@@ -275,11 +290,15 @@ footer {
 /* Cut */
 
 .cut_wrap {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   margin-top: 72px;
   margin-bottom: 56px;
   margin: 72px auto 56px auto;
-  justify-content: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .cut_text {
@@ -305,16 +324,27 @@ footer {
 /* Advantage */
 
 .advantage_wrap {
-  flex-wrap: wrap;
-  flex: auto;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-flex: 1;
+      -ms-flex: auto;
+          flex: auto;
 }
 
 .advantage_row {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex: auto;
-  flex-wrap: wrap;
-  flex-basis: 100%;
-  justify-content: center;
+  -webkit-box-flex: 1;
+      -ms-flex: auto;
+          flex: auto;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -ms-flex-preferred-size: 100%;
+      flex-basis: 100%;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .advantage_row:nth-of-type(2) {
@@ -345,18 +375,29 @@ footer {
 /* Data */
 
 .data_wrap {
-  flex-wrap: wrap;
-  flex: auto;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-flex: 1;
+      -ms-flex: auto;
+          flex: auto;
   background-color: #eeeeee;
   margin: 0;
 }
 
 .data_row {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-wrap: wrap;
-  flex: auto;
-  flex-basis: 100%;
-  justify-content: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-flex: 1;
+      -ms-flex: auto;
+          flex: auto;
+  -ms-flex-preferred-size: 100%;
+      flex-basis: 100%;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .data_row:nth-of-type(1) {
@@ -370,7 +411,8 @@ footer {
 
 .data_row:nth-of-type(2) {
   text-align: center;
-  justify-content: space-around;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
   margin: 0 12% 36px 12%;
 }
 
@@ -389,21 +431,34 @@ footer {
 /* Scene */
 
 .scene_wrap {
-  flex-wrap: wrap;
-  flex: auto;
-  justify-content: space-around;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-flex: 1;
+      -ms-flex: auto;
+          flex: auto;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
 }
 
 .scene_row {
-  justify-content: space-between;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
 .scene_person,
 .scene_pic {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-wrap: wrap;
-  flex: auto;
-  justify-content: space-between;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-flex: 1;
+      -ms-flex: auto;
+          flex: auto;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
 .scene_row:nth-of-type(1) img {
@@ -433,10 +488,15 @@ footer {
 }
 
 .scene_pic {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex: auto;
+  -webkit-box-flex: 1;
+      -ms-flex: auto;
+          flex: auto;
   margin: 42px 0 150px 0;
-  justify-content: space-around;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
 }
 
 .scene_pic>img {
@@ -455,17 +515,30 @@ section.parameter_wrap {
   background-image: url("../image/pic_background01.png");
   background-size: 100% 100%;
   overflow: hidden;
-  flex-wrap: wrap;
-  flex: auto;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-flex: 1;
+      -ms-flex: auto;
+          flex: auto;
   height: 520px;
 }
 
 .parameter_row {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-wrap: wrap;
-  flex: auto;
-  flex-direction: column;
-  justify-content: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-flex: 1;
+      -ms-flex: auto;
+          flex: auto;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .parameter_wrap>div {
@@ -473,7 +546,9 @@ section.parameter_wrap {
 }
 
 .parameter_row:nth-of-type(1) {
-  justify-content: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .parameter_row:nth-of-type(1)>figure {
@@ -514,15 +589,24 @@ section.parameter_wrap {
 /* Product */
 
 .product_wrap {
-  flex-wrap: wrap;
-  flex: auto;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-flex: 1;
+      -ms-flex: auto;
+          flex: auto;
 }
 
 .product_row {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-wrap: wrap;
-  flex-basis: 100%;
-  justify-content: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -ms-flex-preferred-size: 100%;
+      flex-basis: 100%;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .product_row:nth-of-type(2) {
@@ -582,20 +666,37 @@ section.parameter_wrap {
 .contact_wrap {
   background-image: url("../image/pic_background02.png");
   background-size: 100% 100%;
-  flex-wrap: wrap;
-  flex: 1 1 50%;
-  justify-content: center;
-  align-items: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 50%;
+          flex: 1 1 50%;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   margin: 0;
   height: 518px;
 }
 
 .contact_row {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-wrap: wrap;
-  flex: auto;
-  flex-direction: column;
-  justify-content: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-flex: 1;
+      -ms-flex: auto;
+          flex: auto;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .contact_row:nth-of-type(1) {
@@ -655,8 +756,11 @@ section.parameter_wrap {
 
 /* Partner */
 .partner_wrap {
-  flex-wrap: nowrap;
-  flex: auto;
+  -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
+  -webkit-box-flex: 1;
+      -ms-flex: auto;
+          flex: auto;
   color: #646464;
 }
 
@@ -758,21 +862,32 @@ section.parameter_wrap {
 /* Footer */
 
 .footer_wrap {
-  flex: auto;
-  flex-direction: column;
+  -webkit-box-flex: 1;
+      -ms-flex: auto;
+          flex: auto;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   background-color: #eeeeee;
   margin: 0;
 }
 
 .footer_row {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   text-align: center;
 }
 
 .footer_row:nth-of-type(1) {
-  justify-content: space-around;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
   margin: 0 20%;
 }
 
