--- a/css/style.css
+++ b/css/style.css
@@ -841,7 +841,7 @@ section.parameter_wrap {
     margin: 5px 0 25px 0;
 }
 
-.content-wrap-1,
+/* .content-wrap-1,
 .content-wrap-2,
 .content-wrap-3,
 .content-wrap-4 {
@@ -850,7 +850,7 @@ section.parameter_wrap {
 
 .selected {
     display: block;
-}
+} */
 
 .content-wrap-1 figure img {
     width: 100%;
